# accel

./: .gitignore  CMakeLists.txt
include/: accel.core.h
test/: CMakeLists.txt
test/core/: test.cpp
